todos/0.1.0/readme.md
# @rookery/todos

Todos, epics and a dependency DAG over [`@rookery/core`](../../core/0.1.0) notes.

```typst
#import "@rookery/core:0.1.0": rookery
#import "@rookery/todos:0.1.0": todo, todos-ready, todo-graph-view
#show: rookery

#let TODAY = datetime(year: 2026, month: 8, day: 25)

#todo("fetch", title: [Fetch the source], priority: 0, done: datetime(year: 2026, month: 8, day: 1))[...]
#todo("parse", title: [Parse it], priority: 9, type: "bug", deps: ("fetch",))[...]

#todos-ready(today: TODAY)
#todo-graph-view(today: TODAY)
```

A todo is an ordinary rookery note carrying a `todo` tag. **Nothing is stored
anywhere else** — the registry rookery already keeps *is* the todo database, and
every view here is derived from it at build time.

## What this is, and what it is not

This simulates much of the useful surface of [`br`](https://github.com/steveyegge/beads),
the beads issue tracker. The framing that decides what made it in:

> **br is a mutable SQLite database; this is a static build.**

So this package ports br's **derived views** and not its **mutation surface**.
A status change here is an edit to a `.typ` file, which is the point rather than
a shortcoming.

| `br` | here | |
| --- | --- | --- |
| `br list` | `#todos-list(..)` | ✅ |
| `br search` | `#todos-search(..)` | ✅ in-page filter |
| `br ready` | `#todos-ready(today: ..)` | ✅ |
| `br blocked` | `#todos-blocked()` | ✅ |
| `br stale` | `#todos-stale(today: .., older-than: ..)` | ✅ |
| `br stats` / `count` | `#todos-stats(today: ..)` | ✅ |
| `br graph` | `#todo-graph-view(today: .., closed: ..)` | ✅ |
| `br epic` | `#epic(name)` | ✅ as a tag, not a tree |
| `br create` | `#todo(..)` | ✅ |
| `br update` / `close` / `dep add` | — | edit the `.typ` |
| `br comments` | — | the note's body |
| `br dep --type parent-child` | — | see "No parent edges" |
| `pinned`, `ephemeral`, `compaction_*`, `source_*`, `agent_context` | — | beads infrastructure |

## Closing a todo

Three spellings, one log entry — the third and the second fold into the first
before anything reads them, so they cannot disagree:

```typst
#todo("fetch", timeline: (closed: d))[...]   // the store, written directly
#todo("fetch", done: d)[...]                 // the shorthand
#let shipped = done(d)                       // the factory, for a shared date
#shipped("fetch", priority: 2)[...]
```

- **A close is a DATE.** `done: true` is refused with a message: a log entry
  needs a date, and nothing here auto-stamps one because there is no clock to
  stamp from — `datetime.today()` returns 1980-01-01 under a reproducible-build
  `SOURCE_DATE_EPOCH` and fails silently while doing it.
- **`done:` takes whatever a log entry takes**, so a close can carry its own
  prose: `done: (timestamp: d, note: [Landed as ..])`.
- **`#done(date)` is a factory**, the same shape as `#epic(name)`: it returns a
  `#todo` variant with `done:` bound and keeps the entire call surface —
  content bodies, all three id forms, `priority`, `deps`, `tags`, a further
  `timeline:` of other stages. It curries rather than taking the date as a
  leading positional argument because `#todo`'s first positional is the note's
  ID, and a date there would take that slot.
- **Closing twice is refused** — `done:` together with `timeline: (closed: ..)`
  leaves the date the todo closed on unknowable, so write one of them.

## Marking a todo in progress

Two spellings, one key — `active:` folds into `status:` before anything reads
it, so they cannot disagree:

```typst
#todo("fetch", status: "in-progress")[...]   // the field, written directly
#todo("fetch", active: true)[...]            // the shorthand
```

- **`active:` is a FLAG, not a date**, where `done:` is the other way round. A
  close is a dated event and belongs in the log; being under way is a state,
  and `status: "in-progress"` never carried a date. A todo that wants to record
  when it was picked up writes the log stage that exists for it alongside:
  `#todo("fetch", active: true, timeline: (activated: d))`.
- **`active: false` is the default and emits nothing.** Absence is "not said",
  not "not in progress" — the same rule `closed: false` follows.
- **Both at once is refused.** `active: true` together with any `status:` is
  one field written twice, so write one of them.

## 0.1.0 — a todo's dates are one log

The first release of this package, version-aligned with `@rookery/core`,
`@rookery/search` and `@rookery/timeline`; an alpha lineage up to
0.6.0 preceded it and has been retired. The one thing worth carrying forward
from it is the shape of a todo's dates, because a project coming off the alpha
has call sites to change.

A todo has a lifecycle — filed, scheduled, activated, closed — and it used to be
spread across three owners: rookery core's `minted`/`updated`,
`@rookery/timeline`'s two date keys, and this package's own valued
`todo-closed`. That last one was a dated event wearing a tag's clothes. Every
date a todo carries now lives in one timeline, and a close REQUIRES a
`datetime` — `closed: true` is refused:

```typst
#todo("ship", deadline: d, timeline: (activated: d2, closed: d3))[...]
```

- **`#todo` takes `scheduled:`, `deadline:` and `timeline:` as named arguments**, being
  built on rookery-timeline's `dated(..)` decorator. The old `tags: entries(deadline: d)`
  form still works and is still supported.
- **The `closed:` ARGUMENT is gone**, and a close is a log entry: write it as
  `timeline: (closed: d)` or as the `done: d` shorthand above. `closed: true`
  used to mean "closed, when unknown"; an entry needs a date, and this package
  has no clock to stamp one from, so an undated close is simply a caller who did
  not say when. The message says so.
- **`todo-closed` survives as a FLAT marker** carrying no date. See surface 2
  below for why that is not a second copy.
- **`activated` joins the vocabulary** — the moment a todo went from ready to
  being worked on. rookery-timeline reserves `scheduled`/`deadline`/`closed` and
  leaves the rest to its consumers; a status transition is this package's to name.
- **`#todos-stale` now measures activity rather than document age.** It read
  core's `updated`, which fell back to the DOCUMENT's date — so on any project
  that did not hand-write an `updated:` per todo, "stale" reported how old the
  document was. It reads the log's last entry now.
- **`updated:` is gone from `#idea`**, so passing it to `#todo` does nothing —
  and does it silently, since the argument lands in `#idea`'s positional sink
  rather than erroring. Rookery removed the field.

Migrating: change every `closed: true` to `done: <the date it closed>`, and every
`closed: <datetime>` to `done: <datetime>`. If you read `closed-on`, it now comes
from the log; if you filtered on `tags:todo-closed`, that still works.

## A skin over rookery

Same pattern as `@rookery/timeline`, one layer further out: import `idea`,
`window` and the rest **from here** and get versions that know about todos.

```typst
#import "@rookery/todos:0.1.0": idea, rookery, todo, window
```

It imports the **timeline skin**, not rookery directly, so the decoration composes:
`idea` arriving here is already `dated(rookery.idea)`, and a note written through
this package takes the log arguments as well as the todo ones.

**`window` is the one name this layer overrides.** A closed todo is not transcluded:

```typst
#window("some-todo")                // renders nothing if that todo is closed
#window("some-todo", closed: true)  // opts it back in
```

A closed todo windowed into a page is noise — the thing is done, and the reason to
window a todo at all is to have it in front of you.

**Only the NAMED case is filtered**, and that is a limitation rather than an
oversight. `#window` takes either a name or a `tags:`/`match:` selection. Given a
name, this wrapper reads that note's tags and decides. Given a selection, rookery
does the selecting internally and `tags:`/`match:` are any/all over a list with **no
negation** — so a wrapper cannot express "todo and not closed", and a tag-selected
window still shows closed todos. Fixing that needs a negation or a predicate hook in
rookery's own tag predicate, not a workaround here.

**A closed todo is also greyed where it is hatched**, not only in a list view. It
needs nothing new from rookery: `.idea-box` and a note's heading already carry
`idea-tag-<key>` for every tag key, so the closed marker is on the card as a class.
The card recedes as a whole via `opacity` — one property rather than a rule per part
— and hovering restores it, since a closed todo is receded and not hidden. Override
`--todo-closed-opacity` to taste.

## The three tag surfaces

This is the whole design of the package. Read it before adding an attribute.

**1. Flat, key encodes the value.** Value `none`, so each renders as a pill,
emits a `.idea-tag-<key>` class, and is filterable by rookery's own
`#window(tags:)`/`#ideas(tags:)` *and* by `@rookery/search`'s tag query
language.

| key | from |
| --- | --- |
| `todo` | every todo |
| `todo-p<n>` for any `n > 0` | `priority:` (bigger is more important; 0 or absent is unprioritised) |
| `todo-task`, `todo-bug`, `todo-feature`, `todo-epic`, `todo-chore`, `todo-docs`, `todo-question` | `type:` |
| `todo-in-progress`, `todo-deferred`, `todo-draft` | `status:` (or `active:` for the first) |
| `epic-<name>` | `#epic(name)` |

The payoff is concrete and costs this package nothing: **`tags:todo&!todo-closed`
in a search bar lists open todos**, with no rookery-todos code involved.

**2. Valued.** No pill, but the KEY is still present, so a valued tag is still
presence-filterable — `#window(tags: "todo-deps")` finds every todo with
dependencies.

| key | value |
| --- | --- |
| `todo-deps` | array of note names |
| `todo-metadata` | dictionary — estimate, assignee, close-reason, external-ref, … |

**`todo-closed` moved to surface 1 in 0.6.0**, and it is worth saying why it did
not simply disappear. The DATE a todo closed lives in the log, with every other
dated event in its life — that is the whole point of 0.6.0. But rookery's tag
predicate and rookery-search's `tags:` query both test KEYS, so a fact living only
inside a tag's VALUE is invisible to them, and `tags:todo&!todo-closed` — the
payoff named at the top of surface 1 — would have been lost to buy tidiness.

So `todo-closed` is now a FLAT presence marker valued `none`, carrying no date and
duplicating nothing. `is-closed` reads either it or a `closed` entry in the log, so
a note written straight through `entries(timeline: (closed: d))` without `#todo` still
reads as closed; `closed-on` reads only the log, the one place the date is stored.
`closed: false` still emits no key at all.

**3. Not tags of ours at all.**

- **Labels are plain, unnamespaced rookery tags.** `#todo("x", tags: ("phd",))`.
  A todo's labels *are* rookery tags, and namespacing them would break exactly
  the filtering and theming that is the point.
- **Dates come from [`@rookery/timeline`](../../timeline/0.1.0)** —
  `#todo("x", deadline: d, timeline: (activated: d2))`, or the older
  `#todo("x", tags: entries(deadline: d))`. One concept, one package, and as of
  0.6.0 one log.
- **`created` is rookery core's own**, forwarded straight through `#todo`. There
  is no `updated` beside it any more; `updated-of(row, tags)` in rookery-timeline
  derives last-touched from the log instead.

## Rows as windows: `windows:`

`todos-list`, `todos-ready`, `todos-blocked` and `todos-stale` each take
`windows: false`. Set it and every row renders as a folded
[`#window`](../../core/0.1.0) — the todo's own body, one click away, in place —
instead of a link to its minted page.

```typst
#todos-ready(today: TODAY, windows: true)
```

**It defaults to `false`**, so nothing changes for an existing project: with the
flag unset the views emit exactly the markup they did before.

**Paged and EPUB targets fall back to the link list.** A PDF has no fold to
click, so a window row there would be a heading with a body under it and no way
to tell it from the surrounding prose. That is a deliberate branch, not a gap.

**Why the flag lives here rather than in your project:** `ready` and `blocked`
are derived from the dependency graph and the calendar, never stored as tags, so
no `#window(tags: ..)` selection can express them. Only code that has already
computed the rows can hand `#window` the names.

### Backlinks

A `windows: true` view gives every todo it lists a backlink from the page
holding the view — the note's own page lists that page under "Context", exactly
as it would for a `#window` you wrote by hand.

That is worth knowing before putting one on a busy index: a page listing twenty
ready todos becomes a backlink on all twenty. It is not suppressible, and should
not be — the view really does reference those notes, and hiding that from the
backlink walk would make the walk lie.

This needed a fix in `@rookery/core` 0.5.0 to work at all. The backlink walk
reads a page's content at template time, which cannot enter a `context` block,
and these views must run inside one; a window emitted from there used to
announce itself to nobody. rookery now labels `#window`'s announce marker and
collects those by `query()` instead, which sees them wherever they were
written.

A TAG-SELECTED window is still the exception: `#window(tags: ..)` produces no
backlink for the notes its tag matched, only for ones named outright. That
asymmetry is rookery's and is documented there.

## Filtering todos in the page: `#todos-search`

```typst
#todos-search(today: TODAY)
```

A text input that fuzzy-filters the todos as you type, with the matches listed
below it as **links to each todo's minted page**, and a row of toggleable pills
that refine the set further.

```typst
#todos-search(
  title: none,
  placeholder: "Filter todos",
  today: none,
  closed: false,
)
```

`closed: false` is the default here, unlike `#todos-list` where it is `true`: a
filter box is for finding live work.

**The pills** are `ready`, `blocked`, and one per todo *type* any listed todo
actually has — no pill is emitted for a type nothing carries, since that filter
could only ever return nothing. Within a facet the values **OR** (two status
pills mean either); across facets they **AND** (`blocked` + `docs` leaves todos
that are both).

`ready` and `blocked` are stamped into each row at build time, computed against
the whole dependency graph. That is also why this widget is here rather than in
`@rookery/search`: both are derived from the graph and the calendar and
deliberately never stored as tags, so no tag query can select them.

**Searching covers the body, not just the title** — the haystack is the title,
the name and the body, so typing a phrase from inside a todo finds it.

### A `tags:` expression, when `@rookery/search` is installed

With that package on the page the input also takes the reader's `tags:` query
language, against **every tag the todo carries** rather than the pill
vocabulary:

```
tags:todo&!todo-closed        the open todos
tags:todo-p9                  the priority-9 ones — no pill names a priority
tags:phd window               a tag filter, then "window" as the fuzzy query
```

The expression decides **which** rows exist and the residual text decides how
they **rank**, the same division `#todo-table` draws. It **ANDs** with any
pressed pill: both are visible commitments, so a row must satisfy both.

**Without `@rookery/search` the input is the plain fuzzy filter it has always
been** — `tags:todo` is then scored as literal text, matches nothing, and raises
nothing. This package still declares no dependency on that one for this widget:
`#todos-search` imports nothing from it and names it in no manifest. The browser
half feature-detects the `RookerySearch` global at wire time and offers one more
capability when it finds it, which is deliberately *not* the same thing as
`#todo-table`'s real package edge.

### `sync:`, when `@rookery/search` is installed

```typst
#todos-search(today: TODAY, sync: "t")
```

**`sync: "t"` puts the box and the pills in the URL:** the typed query lands
in `?t.q=`, each pressed `ready`/`blocked` pill in its own repeated
`?t.status=`, and each pressed type pill in its own repeated `?t.type=`. A
reload, or a link a reader was handed, opens on the same filtered view.
`sync: none` — the default — leaves the widget exactly as it has always been,
local to the page.

**This needs `@rookery/search` on the page, detected the same way the `tags:`
expression above is** — at wire time, through the `RookerySearch` global
rather than an import, since this file has no import edge to that package
(see its own header). The URL-syncing primitives themselves live there; this
widget only reaches for them. With that package absent, `sync:` set changes
nothing: the box and pills stay local, and nothing is raised.

A reader who presses `ready` and types "phd" against the call above leaves
with `?t.q=phd&t.status=ready` in the address bar.

`@rookery/search`'s readme, under its own `sync:` section, is the reference
for the parameter shape, the reserved `q` name, the key's character set, and
the one-key-per-page rule — this section names only the three parameters
`#todos-search` itself produces.

### Without JavaScript

The input and the pills are hidden and every todo is listed as an ordinary
link. Nothing is fetched or built in the browser: Typst emits every row up
front and the script only shows, hides and reorders them. A paged or EPUB
target gets the plain list too.

### When you want the whole rookery instead

Use [`@rookery/search`](../../search/0.1.0). This filters *the todos on
this page*; that searches every note in the rookery, with a proper ranking and
a modal. The two are independent — this package does not depend on it, and a
project may install either alone.

## Grouped pills: `#todo-table`

The other filter box: `@rookery/search`'s `#panel` told about the todo graph, with
pills that know what `ready` and `blocked` mean.

```typst
#todo-table(today: TODAY)
```

**`rows:` is the set the panel lists; `corpus:` is the set its dependency graph is
built from**, and `corpus:` defaults to `none`, meaning "the same as `rows:`" — which
is what the panel has always done. A listed todo's blocker is very often closed, and
a graph missing that blocker reads a row as unblocked *because invisible* rather than
*because done* — quietly promoting a blocked todo to ready. A caller narrowing
`rows:` (one epic's todos, say) must pass the whole corpus too, or every row it lists
comes out ready regardless of what actually blocks it:

```typst
#todo-table(rows: rheo-todos, corpus: todos(), today: TODAY)
```

**Four pill groups, none of them declared:** `epic` on its own line under an
`epic:` label, `tag` on the next, then `state` and `priority` together under
`todo states:`. The first two say what a todo is *about*, the last two how far
along it is. `pill-rows:` declares that layout and a caller may replace it.

**The subject groups and the state groups compose differently, because they ask
different kinds of question.**
Within any group the values **OR**. Between `state` and `priority` they **AND** —
`blocked` + `p9` leaves blocked priority-nine todos, where `#todos-search`'s single
undifferentiated pill row could only ever union. Between `epic` and `tag` they
**OR**: those two are one question in two projections, so pressing `rheo` (an
epic) and `birds` (a tag) shows both, not their intersection. Splitting them
across two lines changes nothing about that — the composition follows the
question, not the layout. That is `#panel`'s
[`union:`](../../search/0.1.0/readme.md#union--groups-that-answer-one-question), and
before it existed the pair returned nothing at all — a todo under `epic-rheo` gets no
`rheo` pill in the tag group (see below), so no row could ever be both.

**The `tag` group is every plain tag the listed todos carry**, and that is the point
of it: put a new tag on one todo and its pill is there on the next build, with no
list to maintain anywhere. It is a `multi:` facet in `#panel`'s sense — a row holds a
*set* of tags, so pressing two tags widens the list and a row carrying either
survives.

What it leaves out, all of it a fact another group already states:

- **Valued keys** — `timeline-log`, `todo-deps`, a site's own `cfp-venue`. That is
  the three tag surfaces above doing the work: the flat surface is the one that
  renders as a pill, and a valued key holds a date, a URL or an id, which a reader
  filters by key rather than wears as a name.
- **`todo` and `todo-*`** — `state` and `priority` decode those properly. A `todo`
  pill would select every row there is.
- **`epic-*`, and the bare tag whose `epic-<tag>` is also present.** A site minting a
  todo under an epic writes both keys, so without this the epic's name would sit in
  two groups at once, and one pill would read as two filters. It is exactly this rule
  that makes the subject line's `union:` necessary: the epic's name lives in one
  group only, so the two groups cannot be intersected.

**Tags are not chipped on the row by default**, unlike the other three facets, and
that is a decision about the grid: `.idea-row` is `<gutter> 1fr auto auto` and the
badge strip is that last `auto`, so a chip per tag makes the strip as wide as the
widest row's tag list and squeezes every title on the page to pay for it. Each row
still wears every tag as an `.idea-tag-<tag>` class, so theming by tag is unaffected.

**`badge-pills: true` turns the strip into the same pressable pills the block above
the list draws**, and joins the tag group into it at the same time — the two are one
knob because they are one decision: a tag a reader can already see on a row is a tag
they want to press, and a strip mixing chip-shaped state with pill-shaped state says
two things in two conventions on one line. `false` (the default here, for the grid
reason above) keeps every badge a chip and keeps tags off the row entirely; `#today-panel`
below turns it on, where the strip is a handful of rows rather than a scrolling worklist.

**To keep a whole tag family out of the group**, pass `tag-filter:` — a predicate over
the tag key, which narrows the group and cannot widen it:

```typst
#todo-table(
  today: TODAY,
  tag-filter: k => not k.starts-with("venue-") and not k.starts-with("sort-"),
)
```

A predicate rather than a list of names, because the group's whole value is that
nothing declares it: a list of tags to exclude is the same maintenance burden back
again, one entry per tag instead of one per pill. What a site wants to drop is a
*family*, and its families are its own — `venue-*` and `sort-*` here, some other
scheme on the next site. The package's own four rules above run first regardless, so a
`tag-filter` returning `true` for `timeline-log` still gets no pill.

**The input takes a `tags:` expression**, the same language `@rookery/search`'s bar
takes — so the string this package's own tag-surface note has always advertised now
works in the box as well:

```
tags:todo&!todo-closed
```

It is evaluated against every tag the todo carries rather than against the pills, and
that gap is widest here: the `tag` group drops the whole `todo-*` namespace and the
epics, so `tags:todo-p9` and `tags:epic-jobs` name things no pill on this panel offers.
The expression filters and the residual text ranks (`tags:todo window`), and it **ANDs**
with whatever pills are pressed. `@rookery/search`'s `#panel` section carries the rules.

`#todos-search` — the other filter box, further up — does **not** take the language: it
has its own input and its own scorer, and giving it one is separate work.

**The date column carries two kinds of thing, and each is one argument.**

```typst
#todo-table(today: TODAY, overdue: true, undated-priority: true)
```

A dated row shows its date, washed by how long is left — and **solid red where the
deadline is behind you**. That fourth band is this package's own: `countdown()` in
`@rookery/timeline` calls overdue and due-today alike `urgent`, which is right for a
chip saying how long you have and wrong for a worklist, where *late* and *due today*
are different instructions. `overdue: false` drops those rows from the panel
altogether — for a list read as "what is coming", on a site that logs its lapsed work
elsewhere.

An **undated** row shows its own priority number where the date would go — `P9`, `P2`,
whatever it carries — coloured by its RUNG: its index among the three highest
priorities this panel lists, so the top priority takes the ramp's own red, the
second orange, the third yellow, and every priority beyond those three rungs shares
the coolest one. The scale is drawn from what this panel lists, not from every
priority in the rookery, so a closed todo elsewhere at a higher priority never sets
a rung none of this panel's rows can reach. The priority chip leaves the badge strip
either way, being the same fact at the other end of the row. The undated rows also
*sort* by their priority,
descending, with an unprioritised row last — which is what the date sort alone cannot
say, keying every undated row alike. `undated-priority: false` leaves them in registry
order with an empty cell.

Both ride on `today:`, as the countdown does: with no reference date nothing is
measured, so no row is dropped and no band drawn. Neither touches a dated row's
ordering — a date is the firmer statement, and priority washes such a row only where
the countdown has nothing to say.

**`order: "urgency"`, the default, interleaves the same two ladders** so the top
priority on the page floats to the top alongside whatever is due today. A row's
*band* is the sooner of its `@rookery/timeline` countdown level and its priority
rung:

| band | countdown level | priority rung |
|------|-----------------|---------------|
| 0    | `urgent` — overdue, today, tomorrow | hottest priority in use |
| 1    | `soon` — 2 to 7 days | second hottest |
| 2    | `later` — 8 to 14 days | third hottest |
| 3    | no level — more than 14 days out, or undated | fourth hottest and below, or unprioritised |

A row sits in the lowest-numbered band it qualifies for by *either* ladder: a
todo due tomorrow is band 0 whatever its priority, and the hottest priority in
use is band 0 however far out its date sits, or if it has none at all. An
in-progress row is band 0 outright — someone is already on it, which is the
one fact neither ladder can express.

**`hoist:` puts a row in band 0 for a reason of the site's own**, as a
predicate over a row — `r => bool`. Neither ladder can read a hand-set tag
meaning "on for today whatever the dates say", so a site with such a
convention passes it here rather than hand-rolling the band itself:

```typst
#todo-table(today: TODAY, hoist: r => "today" in r.tags-dict)
```

It only promotes: a row `hoist:` says nothing about keeps whichever band the
two ladders already put it in, and there is no way to use it to sink a row to
a cooler band.

**Within one band**, rows read in-progress first, then the dated rows earliest
first, then the undated rows by priority — the same priority order the date
column's own undated sort above uses. That middle rule is the point of the
band system: a scheduled or deadlined todo still outranks one that is only in
the band on priority.

`order: "soonest"` and `order: "newest"` keep the panel's older, unbanded
order — the earliest date first, or the latest — with in-progress rows still
hoisted above either and undated rows still sorting last by priority.

`"urgency"` needs `today:` to band by date at all, same as the countdown and
overdue washes above: with none passed, every row's date-band is the coolest
one and the order falls back to the priority bands alone, with dated rows
first inside each — not an error, just a coarser order.

**`bands:` narrows the panel to the bands named**, an array of band numbers —
`bands: (0,)` keeps only band 0, the default `auto` keeps every band. A row's
band is still decided against the whole panel first, so trimming the list to
one band never redraws the priority scale from the rows left behind. A day
view is band 0 with nothing else changed:

```typst
#todo-table(
  today: TODAY,
  bands: (0,),
  badge-pills: true,
  visible: none,
  placeholder: "Filter today",
  empty: [Nothing for today.],
)
```

The four extra arguments are what make this read as a day view rather than a
worklist: every badge pressable, no scroll box, and its own placeholder and
empty text.

Pass `facets:` to narrow the groups — `facets: ("epic", "state", "priority")` drops
the tag pills — and `pill-rows:` to lay the remaining ones out differently. Its
entries are `(label: <content or none>, facets: (<group names>))`, one per line, the
same shape `#panel` takes for `facet-rows:`; a line whose groups are all absent from
`facets:` is dropped, so narrowing one argument needs no edit to the other. Every
group on one unlabelled line is `pill-rows: ((facets: ("epic", "tag", "state", "priority")),)`.

**`sync:` opts the whole panel into URL state**, forwarded straight to
`@rookery/search`'s `#panel` unchanged: `sync: "t"` puts the filter box in
`?t.q=` and each pill group in its own repeated parameter — `?t.epic=`,
`?t.tag=`, `?t.state=` and `?t.priority=` for the four groups this panel
ships by default. `sync: none` — the default — leaves the panel local to the
page. `@rookery/search`'s readme, under its own `sync:` section, is the
reference for the parameter shape, the reserved `q` name, and the
one-key-per-page rule.

## A day view: `#today-panel`

```typst
#today-panel(today: TODAY, noun: "todos")
```

Where `#todo-table` lists everything open, `#today-panel` answers the
narrower question a person actually asks first thing: what is on for today,
what is being worked on right now, and what is important regardless of its
date. It lists the union of five things — a todo marked in progress, a
deadline falling today, a deadline already behind today, a scheduled date
that has arrived, and whichever priority sits at the top of the open corpus
— and a todo needs to satisfy only one of them to make the list. Everything
past the selection is `#todo-table`'s own: the pills, the
date-cell ramp, the row shape, and every knob that view already takes
(`rows:`, `filter:`, `facets:`, `pill-rows:`, `sync:`, and the rest), because
`#today-panel` draws nothing of its own — it hands `#todo-table` a smaller
list and gets the same widget back. Two defaults change on the way in.
`visible:` is `none` here where `#todo-table` defaults to `8`: a day view is
meant to be read whole, not scrolled. `badge-pills:` is `true` here where
`#todo-table` defaults to `false`: a handful of rows read whole does not pay
the grid-width cost that default exists to avoid, so every badge in a row's
strip — including its tags — is drawn as the same pressable pill the block
above the list draws, and pressing a tag on a row filters the list exactly as
pressing its twin above does.

**A todo marked in progress is always on the list.** `status: "in-progress"`
(or its shorthand `active: true`) puts a todo on today's list whatever its
dates or priority say, and sorts it above every dated row — the same hoist
`#todo-table` gives an in-progress row everywhere else. It is the one clause
here with no argument to turn it off: there is no site that wants its day
view to hide the thing its author has declared they are working on right
now.

**Overdue work stays on the list by default.** `#todo-table` already paints
an overdue deadline's date cell solid red; this view keeps that row in front
of you rather than dropping it, because a day view that quietly hides what
is already late is worse than none. `overdue: false` removes those rows
outright, for a site that logs lapsed work elsewhere.

**A scheduled todo counts as "for today" from the day it arrives, not only
on that day** — `is-scheduled-now` semantics, inherited whole from
`@rookery/timeline`. A todo scheduled for last month, still open, sits on
today's list until it closes. This is the one behaviour worth naming before
it surprises a reader on a live site: "scheduled" here does not mean "due".

Four arguments belong to this view alone:

- **`horizon:`** widens the deadline half only — how many days past today
  still count as due soon, passed straight to `is-upcoming`'s `within:`. `0`
  by default: due today, exactly. It does not touch the overdue, scheduled,
  or priority clauses.
- **`overdue:`** whether a deadline already behind you is listed at all.
  `true` by default, for the reason above.
- **`priority:`** which todos join on importance alone, regardless of date.
  `auto` (the default) reads the topmost priority actually carried by the
  rows this panel is choosing FROM — the open corpus after `filter:`, not
  the narrower "on for today" list this same call is about to produce,
  which would make the band depend on its own result. An integer floors it
  explicitly: every row at that priority or above joins, whatever `auto`
  would have picked. `none` turns the whole priority half off, leaving a
  plain dated list.
- **`also:`** a predicate that ORs extra rows IN — the one hole this
  package cannot fill for itself, for a site with a reason a todo belongs on
  today's list that no date or priority captures. It is easy to reach for
  the wrong argument here: `filter:` narrows the corpus this panel chooses
  from before the day's question is even asked, so it can only ever remove
  rows; `also:` widens the answer to that question, adding rows back in from
  among whatever `filter:` left standing. `none` (the default) adds none.

## Decks: #todo-slipshow

```typst
#import "@rookery/slipshow:0.1.0": slipshow
#import "@rookery/todos:0.1.0": todo-slipshow

#todo-slipshow()
```

A bare `#todo-slipshow()` is the whole todo corpus laid out as an
`@rookery/slipshow` deck, read depth-first and stacking down the screen:
naming no selection of its own (no `slips:`, `tags:`, or `where:`) defaults
it to `tags: "todo"`, the key every todo carries.

It feeds `#slipshow` four derived key functions from `todo-slip-keys`, none
of them a tag on any `#todo`:

- **`row:` is the SIBLING GROUP** (`dfs-of`, `src/graph.typ`): the todos one
  parent releases are a group, and a group of two or more shares a row, side
  by side. A group of ONE gets no row at all — a lone slip needs no wrapper —
  so a chain of todos each releasing the next stacks all the way down.
  `layer-of` and `layers` are still what `#todo-graph-view` lays the DRAWN
  graph out with; a deck does not use them.
- **`order:` is the DEPTH-FIRST position** in that same walk, zero-padded so
  it sorts as a string. Depth-first is what keeps a connector curve short: one
  branch is followed to its end before the next starts, so a todo sits beside
  the work it unblocks instead of a layer away from it. It is also what keeps
  a group's members ADJACENT: `@rookery/slipshow` groups CONSECUTIVE resolved
  entries into a row and never reorders them, so `row:` with no matching
  `order:` fragments every group into singleton rows of one. The two are a
  matched set for exactly this reason.
  Sibling lists are sorted by priority, then name, unprioritised last — the
  same tie-break `layers()` uses, so the drawn graph and a deck built from the
  same data agree about sequence. Priority therefore decides sequence within a
  row without being part of the sort key.
- **`class:` is the status rail** — `todo-slip-ready`, `todo-slip-blocked`
  or `todo-slip-closed`, which colour `@rookery/slipshow`'s rail rather than
  draw a border of their own (see "Styling" below, which sizes that rail).
- **`edges:` is `blockers-of`** — the todos this one waits on, so a blocked
  slide's rail is fed by a curve down from each of theirs. See
  `@rookery/slipshow`'s readme, "The connector curves", for what is drawn.

**`edges:` is `blockers-of` and not `deps`, and the difference is the whole
behaviour.** `blockers-of` keeps the deps that EXIST and are NOT CLOSED, so
two kinds of dependency draw nothing at all:

- a **satisfied** dep — the same rule `graph-slice` already keeps for the
  graph view, where an edge into a closed todo would point at a box that is
  not on the page. On a deck it would point at a greyed-out slide and claim
  something is waiting on work that is already done.
- a **dangling** dep — one naming no todo. It can never close, which is
  exactly why `is-blocked` does not let one block a todo either.

The consequence is the thing to know from a picture of it: **the source of
every curve is an OPEN todo**, so a curve is green-to-red where the blocker
is ready and red-to-red where the blocker is itself blocked. There is no
third colouring, because a closed todo never starts a curve.

**A caller's own `row:`/`order:`/`class:`/`edges:` wins outright** when
passed to `#todo-slipshow` alongside these: the derived dictionary and the
caller's own named arguments merge with the caller's own keys taking
precedence, exactly as if the derived ones had never been offered.

**`direction:` decides what the todos that share no parent do, and nothing
else.** `"down"` (the default) gives every dependency-free todo a group of its
own, so they stack one under the next; `"across"` makes them a single group,
so they span one row at the top of the deck. Everything they release is laid
out identically either way — because **several todos released by the same
parent always share a row, in both directions**. That is the rule
`direction:` does not touch. `@rookery/slipshow`'s
`examples/dag/content/index.typ` and `across.typ` are the same corpus under
each.

`today:` and `done:` govern how CLOSED todos sort, not whether they appear.
`today:` reaches `is-ready` the same way it does everywhere else in this
package. `done:` is one of `"inline"` (the default), `"first"`, or `"last"`:
`"inline"` reads the DAG straight down, so a closed todo sorts exactly where
the walk and its priority put it, beside its still-open siblings; `"first"`/
`"last"` instead sort closedness ahead of everything else, pulling every
closed todo out of its graph position to one end of the deck — and
therefore FRAGMENTING every row it was part of, the identical fragmentation
a mismatched `row:`/`order:` pair causes above, for the identical reason:
a row's members are no longer adjacent once some of them have been pulled to
the front or back.

**A slip that is not a todo gets no row, no class, no edges, and sorts
last.** All four derived functions look the note up in the dependency graph
first and return `none` when it is not there. For `class:` that is lossy in one
specific way, worth knowing before mixing an authored slide into a todo
deck: `class:` overrides a note's `slip-class` tag by KEY PRESENCE, not
value (`@rookery/slipshow`'s readme, "class: — a key function for a
COMPUTED class") — so `none` here means "no class," not "leave the tag
alone," and a non-todo slip loses whatever `slip-class` it was authored
with. A deck mixing one classed, non-todo slide in among its todos should
pass its own `class:` to `#todo-slipshow`, which wins outright by the rule
above.

**`todo-slip-keys(graph)` is the pure route**, for a caller assembling an
explicit `slips:` array by hand rather than querying by tag: it returns the
same `(row:, order:, class:, edges:)` dictionary `#todo-slipshow` feeds to
`#slipshow` internally. Calling one of its members needs parentheses —
`(keys.order)(r)`, not `keys.order(r)`, which Typst refuses outright with
"cannot directly call dictionary keys as functions." `@rookery/slipshow`'s
own `examples/dag/content/open-only.typ` is the worked case: it slices the
graph to its open todos, sorts that slice by `keys.order`, names the
survivors in a `slips:` array, and hands `keys.row`, `keys.class` and
`keys.edges` straight to `#slipshow`. That is the one composition
`#todo-slipshow` cannot
do for a caller — `order:` and `slips:` conflict, so the sort has to happen
on the page, before the array is named.

**A project using `#todo-slipshow` must import `@rookery/slipshow:0.1.0` in
its own `.typ` files, or the deck gets no CSS and no JS at all.** rheo's
package-asset detection scans only a project's own imports, never a
package's internal ones — the same requirement `@rookery/slipshow`'s own
readme states about itself ("Import both packages, in your own files").
`@rookery/search`'s readme names the identical risk for `#filter-panel` fed
rows from `@rookery/timeline`, and deliberately avoids it by design — "no
edge between the two packages" ("The date column, and rows from
elsewhere"). `#todo-slipshow` has no such luxury: it wraps `#slipshow`
directly, so the requirement lands here the same way regardless. The
failure is silent either way: the deck still compiles and every slip still
shows, in document order, but with neither `slipshow.css`'s styling nor
`slipshow.js`'s camera — no row layout, no card chrome, no keyboard or
click navigation at all.

## Derived, never stored

`blocked`, `ready` and `stale` are questions about the graph and the calendar as
they stand right now, not facts about a note. Tagging them would let them drift
out of step with the deps and dates that define them, and nothing would report
the drift.

`is-ready` is open **and** unblocked **and** not deferred past the reference
date. The deferral clause is what makes it br's `ready` rather than merely "not
blocked" — a todo scheduled for next week is not work you can pick up now.

`stale` changed meaning in 0.6.0 and is now worth the name. It used to read
rookery core's `updated`, which resolved from the DOCUMENT's date when a todo did
not carry one of its own — so on most projects it measured how old the document
was rather than whether anything had happened. It reads the todo's own log now:
touching a todo puts an entry in it, and that is what "untouched" is measured
against.

## No parent edges

Todos are networked **purely** through `deps:`. There is no `todo-parent` key
and no containment tree.

An epic is therefore a tag, not a parent: `#epic("launch")` returns a `#todo`
variant with `epic-launch` bound, and two todos in one epic are unrelated until
one names the other in its `deps:`.

```typst
#let launch = epic("launch")
#launch("plan", priority: 5)[Kick-off.]
#launch("post", deps: ("plan",))[Follows the plan.]
```

The factory keeps `#todo`'s entire call surface — content bodies, all three
`#idea` id forms, every named argument.

## A cycle is a build error

...but it **cannot** be caught at the `#todo` call site, and it is worth knowing
why. `#todo("a", deps: ("b",))` is perfectly legal before `b` exists; the graph
only exists once the registry is final. There is no moment during authoring at
which a cycle is visible.

So the guarantee is assembled from two halves:

- **Every view** runs the cycle check before rendering and panics, naming the
  full path: `dependency cycle: c -> d -> c`.
- **`#todos-validate()`** does the same for a project that renders no view.
  Drop it at bundle root.

Between them a cycle cannot survive a build.

`#todos-validate()` also reports what cannot be a warning: **Typst gives package
code no `warn()`**, only `panic`. So the dangling-dependency and auto-id smells
are emitted into the compiled output (hidden by default) rather than failing a
build that has not actually broken. Pass `strict: true` to turn them into errors.

**Pin any todo something else depends on.** Rookery's unnamed notes take a
sequence number, so `#todo[..]` is `idea:1` — and that number *shifts* when a
note is inserted earlier in the spine, while a `deps` entry naming it does not
follow.

## There is no wall clock

Every view needing a "now" takes an explicit `today:`, falling back to the
document's `#set document(date:)`, and panics if neither is available.

**No function in this package calls `datetime.today()`.** It returns
1980-01-01 wherever `SOURCE_DATE_EPOCH` is set for reproducible builds
(MEASURED, typst 0.15.1) and it does not error while doing it — a stale-todo
report built on it would silently list the entire project.
`@rookery/timeline`' readme carries the full evidence.

## Styling

Everything ships in `@layer todos`, and that is load-bearing. Package
stylesheet order is **not** controllable — rheo collects `css_stylesheet` assets
in package resolution order — so this package cannot rely on landing after
rookery's. A layer settles it regardless of source order, the same device
rookery uses for `@layer rookery-tags`. An unlayered project stylesheet still
beats every layer.

Colours are custom properties with fallbacks, so restyle by setting the property
rather than by out-specifying a selector: `--todo-ready-color`,
`--todo-blocked-color`, `--todo-stale-color`, `--todo-muted-color`,
`--todo-graph-line`, `--todo-graph-edge-color`.

`#todo-slipshow` slides wear `todo-slip-ready`, `todo-slip-blocked` and
`todo-slip-closed` (from `todo-slip-keys`'s `class:` function), which colour
`@rookery/slipshow`'s rail rather than draw a border of their own —
`--todo-slip-rule-width` (default `4px`) and `--todo-slip-rule-gap` (default
`0.5rem`) size that rail.

Rows and graph nodes also wear the note's own `.idea-tag-<key>` classes, so
`.idea-tag-todo-p9` styles a priority-9 todo on its card, in a list row, and in
the graph alike.

### The heat ramp: how close, and how urgent

`#todo-table` **bands the date cell itself** on every row whose date falls within a
fortnight, in the three bands `@rookery/timeline` defines (`countdown`,
`when.typ`): urgent is today, tomorrow and anything overdue; soon is two to seven
days; later is eight to fourteen. The colour is the reading at a glance; the words —
`today`, `tomorrow`, `in 5 days`, `9 days ago` — ride as a tooltip drawn above the
cell on hover and on focus, and as its `aria-label` for a reader who cannot see a
colour. The badge strip stays about facets.

It is **on by default** here, where `#upcoming`'s own `countdown:` is off, because a
panel of outstanding work is read for what is due next. Pass `countdown: false` to
drop it, and note that it needs a `today:` — with none passed no row can be measured
and no countdown band is drawn. (`#upcoming` is untouched: that view keeps its chips.)

**Priority is the fallback, and only where the countdown is silent.** A todo three
weeks out earns no countdown band, so a high-priority todo sitting far out would
otherwise read exactly like a low-priority one beside it; where both could apply the
countdown wins, because a deadline actually due soon is the more pressing read
regardless of how it was prioritised. The band follows a todo's RUNG — its priority's
index among the three highest priorities in use on the site, not the raw number —
so the top priority takes the urgent hue, the second soon, the third later, each a
touch lighter than the countdown band of the same colour, and every priority beyond
those three rungs shares the third. A row with no date is never banded: a wash
behind an em dash says nothing.

| | |
|---|---|
| `--rookery-heat-urgent` | the whole family's first step (defaults to `#b3261e`) |
| `--rookery-heat-soon` | its second (defaults to `#b3611e`) |
| `--rookery-heat-later` | its third (defaults to `#b38f1e`) |
| `--todo-band-urgent` / `--todo-band-soon` / `--todo-band-later` | the countdown wash on the date cell, overriding the mix of the ramp |
| `--todo-band-rung-0` / `--todo-band-rung-1` / `--todo-band-rung-2` | the priority wash, same |
| `--todo-pri-fg-rung-0` / `--todo-pri-fg-rung-1` / `--todo-pri-fg-rung-2` | the ink on an undated row's priority label |
| `--todo-band-fg` | the ink on a banded `soft` date, which is no longer greyed |
| `--todo-tooltip-bg` / `--todo-tooltip-fg` / `--todo-tooltip-border` / `--todo-tooltip-outline` | the drawn tooltip, falling back to rookery's own `--idea-*` |

**One ramp, two readings, and by default they are the same palette.** A site sets the
three `--rookery-heat-*` properties once on `:root` and every heat surface in the
family follows — this package's six date bands, and `#upcoming`'s countdown chips over
in `@rookery/timeline`. The `--todo-band-rung-*` and `--todo-pri-fg-rung-*`
properties exist for the site that wants urgency-in-time and urgency-in-priority to
read differently, and each replaces its band's colour (or its label's ink) whole
rather than feeding a mix:

```css
:root {
  --rookery-heat-urgent: #9c3324;
  --rookery-heat-soon: #b05c12;
  --rookery-heat-later: #b08a10;
  /* ...and, only if the two should come apart: */
  --todo-band-rung-0: color-mix(in oklab, #6a3ab2 34%, transparent);
  --todo-pri-fg-rung-0: #6a3ab2;
}
```

## The graph view degrades

**`closed: false` draws the open todos only.** An index page asking "what is
left" wants exactly that; the finished half of a release otherwise fills the
graph and the remaining work is hard to find. The default is `true`, so an
existing call is unchanged.

Edges go with the boxes: an edge into a closed todo is a *satisfied* dependency,
and drawing it would point at a box that is not on the page. A dangling
dependency — one naming a note that does not exist — is still named in the
fallback list, because it never had a box in any slice.

**Status is still computed against the whole graph**, never the slice. A todo
whose only dependency is closed reads as `ready`, which is the truth; asking the
filtered graph would report it unblocked *because invisible* rather than
unblocked *because done* — the right answer for the wrong reason, and the wrong
answer as soon as a deferred or dangling dep is involved.

`graph-slice(graph, closed: ..)` is exported if you are building your own view
and want the same rows and edges.

**The drawing reads top-down: unblocked work on the top row, arrows running
down to what it unblocks.** So an arrow means *"unblocks"*, not *"depends on"* —
the reverse of how the `deps:` you write points. That is a drawing decision
only: `deps:` in the Typst API and `from`/`to` in the JSON payload both still
describe the dependency, unchanged.

Pair it with `closed: false` and the top row is exactly the ready work.

`#todo-graph-view` emits an SVG drawn client-side from a JSON payload. With
JavaScript off the payload's neighbouring linked list stays in place, so the
todos and their dependencies are still readable; the script removes the
fallback only once it has drawn something.

**On a paged target that same list is the whole rendering.** Every view here
branches on the target: HTML and EPUB get `html.elem` markup, and a PDF gets
plain Typst content — a `list()` of rows for the lists, a comma-joined line for
the stats, and the graph's fallback list for the graph, since there is no
layout engine for a directed graph Typst-side. Counts are computed once and
rendered twice, so the two targets cannot disagree.

The payload is JSON-safe by construction: strings, numbers, booleans and arrays
only, never a raw tag value. A value can be a `datetime` or content, and
`json.encode` of content does **not** error — it silently emits a structural
blob and bloats the page.

## Requirements

- `@rookery/core` 0.6.0 and `@rookery/timeline` 0.6.0. Both are hard imports.
- `@rookery/search`, optionally: `#todos-search`'s `tags:` expression and its
  `sync:` argument (see above) both feature-detect that package at wire time
  rather than importing it, and degrade to doing nothing without it.
- rheo 0.6.0 or later, inherited from rookery's own floor.
- A built package: `dist/` must exist before a project sees an edit.

## Development

```sh
cd todos/0.1.0
just build      # bundles src/ into dist/
just test       # Typst unit fixture
just test-js    # graph layout tests
rheo compile demo/rheo
```

The demo exercises every surface above: twelve todos, a three-level two-branch
DAG, a closed todo, a deferred one, one with a deadline, a stale one, a dangling
dependency, an epic, and all six views.
